# klippbok

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: CAPTIONING.md  COMMANDS.md  PIPELINES.md  WALKTHROUGH.md
examples/: full_data.yaml  minimal_data.yaml  standard_data.yaml
klippbok/: __init__.py
klippbok/caption/: __init__.py  captioner.py  gemini.py  models.py  openai_compat.py  prompts.py  replicate.py
klippbok/config/: __init__.py  data_schema.py  defaults.py  loader.py
klippbok/dataset/: __init__.py  __main__.py  bucketing.py  discover.py  errors.py  manifest.py  models.py  organize.py  quality.py  report.py  trainers.py  validate.py
klippbok/triage/: __init__.py  concepts.py  filters.py  models.py  sampler.py  triage.py
klippbok/video/: __init__.py  __main__.py  errors.py  extract.py  frames.py  image_quality.py  models.py  probe.py  scene.py  split.py  validate.py
tests/: conftest.py  test_caption_models.py  test_caption_prompts.py  test_caption_scoring.py  test_captioner.py  test_data_config.py  test_dataset_bucketing.py  test_dataset_cli.py  test_dataset_discover.py  test_dataset_manifest.py  test_dataset_models.py  test_dataset_organize.py  test_dataset_organize_cli.py  test_dataset_quality.py  test_dataset_trainers.py  test_dataset_validate.py  test_extract_cli.py  test_extract_models.py  test_gemini_backend.py  test_image_quality.py  test_ingest_filtered.py  test_openai_backend.py  test_replicate_backend.py  test_subdivide.py  test_triage_cli.py  test_triage_filters.py  test_triage_models.py  test_triage_organize.py  test_triage_scene.py  test_triage_subjects.py  test_video_extract.py  test_video_frames.py  test_video_models.py  test_video_probe.py  test_video_scene.py  test_video_split.py  test_video_validate.py
(+6 files in other folders)
